--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "express-fileupload": "^0.3.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "@azure/storage-blob": "^10.5.0",
+    "@types/dotenv": "^4.0.3",
+    "dotenv": "^6.0.0"
   }
 }
